--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.3'
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "org.devio.simple"
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -20,6 +19,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':takephoto_library')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':takephoto_library')
+
+    implementation 'com.soundcloud.android.crop:lib_crop:1.0.0'
+    implementation 'com.darsh.multipleimageselect:multipleimageselect:1.0.5'
+    implementation 'me.shaohui.advancedluban:library:1.3.2'
 }
