--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: "config.gradle"
 
 buildscript {
     repositories {
-        jcenter()
         google()
+        jcenter()
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
-//        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
-//        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.android.tools.build:gradle:3.3.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,7 +16,15 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         google()
+        jcenter()
+        maven { url "https://jitpack.io" }
+        flatDir {
+            dirs 'libs'
+        }
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
