--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -22,7 +22,17 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':takephoto_library')
 
+    implementation rootProject.ext.support["design"]
+    implementation rootProject.ext.support["appcompat-v7"]
+    implementation rootProject.ext.support["support-v4"]
+
     implementation 'com.soundcloud.android.crop:lib_crop:1.0.0'
-    implementation 'com.darsh.multipleimageselect:multipleimageselect:1.0.5'
-    implementation 'me.shaohui.advancedluban:library:1.3.2'
+    implementation 'top.zibin:Luban:1.1.8'
+    implementation ('com.darsh.multipleimageselect:multipleimageselect:1.0.5'){
+        exclude group: 'com.android.support'
+        exclude group: 'com.github.bumptech.glide', module:'glide'
+    }
+    implementation ('com.github.bumptech.glide:glide:4.8.0'){
+        exclude group: 'com.android.support'
+    }
 }
