--- a/takephoto_library/build.gradle
+++ b/takephoto_library/build.gradle
@@ -20,7 +20,13 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     compileOnly 'com.soundcloud.android.crop:lib_crop:1.0.0'
-    compileOnly 'com.darsh.multipleimageselect:multipleimageselect:1.0.5'
-    compileOnly 'me.shaohui.advancedluban:library:1.3.2'
+    compileOnly 'top.zibin:Luban:1.1.8'
+    compileOnly ('com.darsh.multipleimageselect:multipleimageselect:1.0.5'){
+        exclude group: 'com.android.support'
+        exclude group: 'com.github.bumptech.glide', module:'glide'
+    }
+    compileOnly ('com.github.bumptech.glide:glide:4.8.0'){
+        exclude group: 'com.android.support'
+    }
 }
 //apply from: "bintrayUpload.gradle"
