--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -26,15 +26,15 @@ dependencies {
     implementation rootProject.ext.support["appcompat-v7"]
     implementation rootProject.ext.support["support-v4"]
 
-    implementation ('com.soundcloud.android.crop:lib_crop:1.0.0'){
-        exclude group: 'com.android.support'
-    }
-    implementation 'top.zibin:Luban:1.1.8'
-    implementation ('com.darsh.multipleimageselect:multipleimageselect:1.0.5'){
+    implementation 'top.zibin:Luban:1.1.8'//官方鲁班
+    implementation ('com.darsh.multipleimageselect:multipleimageselect:1.0.5'){//多图选择库
         exclude group: 'com.android.support'
         exclude group: 'com.github.bumptech.glide', module:'glide'
     }
-    implementation ('com.github.bumptech.glide:glide:4.8.0'){
+    implementation ('com.soundcloud.android.crop:lib_crop:1.0.0'){//裁剪库
+        exclude group: 'com.android.support'
+    }
+    implementation ('com.github.bumptech.glide:glide:4.8.0'){//用自己项目中的版本
         exclude group: 'com.android.support'
     }
 }
